Bug 978647 - Properly handle EOF in DirectShow backend. r=edwin